Add html structure for game

--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Rock, Paper, Scissors! </h1>
+    <div>
+        <div class="game-area">
+            <h2>What will you choose?</h2>
+            <div>
+                <p>You Chose: <span id="user-choice"></span></p>
+            </div>
+            <div class="computer-choice">
+                <p>Computer Chose: <span id="computer-choice"></span></p>
+            </div>
+                
+            <button>Rock <i class="fa-regular fa-hand-back-fist"></i></button>
+            <button>Paper <i class="fa-regular fa-hand"></i></button>
+            <button>Scissors <i class="fa-regular fa-hand-scissors"></i></button>
+            <div>
+                <p>Result: <span id="result"></span></p>
+            </div>
+        </div>
+    </div>
 
 
 
     <script src="assets/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/19e9aeb4f6.js" crossorigin="anonymous"></script>
 </body>
 </html>
