Big test commit will do another project repository

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
                 <p>Computer Chose: <span id="computer-choice"></span></p>
             </div>
                 
-            <button>Rock <i class="fa-regular fa-hand-back-fist"></i></button>
-            <button>Paper <i class="fa-regular fa-hand"></i></button>
-            <button>Scissors <i class="fa-regular fa-hand-scissors"></i></button>
+            <button class="button" id="rock">Rock<i class="fa-regular fa-hand-back-fist"></i></button>
+            <button class="button" id="paper">Paper <i class="fa-regular fa-hand"></i></button>
+            <button class="button" id="scissors">Scissors <i class="fa-regular fa-hand-scissors"></i></button>
             <div>
                 <p>Result: <span id="result"></span></p>
+                <p>Your score: <span id="your-score">0</span></p>
+                <p>Computer score: <span id="computer-score">0</span></p>
             </div>
         </div>
     </div>
