Add header element and move h1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Rock, Paper, Scissors! </h1>
+    <header>
+        <h1>Rock, Paper, Scissors! </h1>
+    </header>
+
     <div>
         <div class="game-area">
             <h2>What will you choose?</h2>
