Add more html elements for semantic reasons and fix winner looser div

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors</title>
 </head>
@@ -15,6 +16,7 @@
     <div>
         <div class="game-area">
             <h2>What will you choose?</h2>
+            <div id="hidden-div"><span id="win-or-lose"></span></div>
             <div>
                 <p>You Chose: <span id="user-choice"></span></p>
             </div>
@@ -22,7 +24,7 @@
                 <p>Computer Chose: <span id="computer-choice"></span></p>
             </div>
                 
-            <button class="button" id="rock">Rock<i class="fa-regular fa-hand-back-fist"></i></button>
+            <button class="button" id="rock">Rock <i class="fa-regular fa-hand-back-fist"></i></button>
             <button class="button" id="paper">Paper <i class="fa-regular fa-hand"></i></button>
             <button class="button" id="scissors">Scissors <i class="fa-regular fa-hand-scissors"></i></button>
             <div>
