add new function to start

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <p>Computer Chose: <span id="computer-choice"></span></p>
             </div>
                 
-            <button class="button" id="rock">Rock <i class="fa-regular fa-hand-back-fist"></i></button>
-            <button class="button" id="paper">Paper <i class="fa-regular fa-hand"></i></button>
-            <button class="button" id="scissors">Scissors <i class="fa-regular fa-hand-scissors"></i></button>
+            <button class="button" id="rock" data-type="rock">Rock <i class="fa-regular fa-hand-back-fist"></i></button>
+            <button class="button" id="paper" data-type="paper">Paper <i class="fa-regular fa-hand"></i></button>
+            <button class="button" id="scissors" data-type="scissors">Scissors <i class="fa-regular fa-hand-scissors"></i></button>
             <div>
                 <p>Result: <span id="result"></span></p>
                 <p>Your score: <span id="your-score">0</span></p>
