Try to fix problem with increment score

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                 <p>Your score: <span id="your-score">0</span></p>
                 <p>Computer score: <span id="computer-score">0</span></p>
             </div>
+            <button id="reset">RESTART GAME</button>
         </div>
     </div>
+
 
 
 
