Fixed pathway for images

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div id="hidden-div"><span id="win-or-lose"></span></div>
             <div class="choice-div left-div">
                 <p>You: <span id="user-choice"></span></p>
-                <img id="player-image" src="/assets/images/paper.jpg" alt="Paper">
+                <img id="player-image" src="assets/images/paper.jpg" alt="Paper">
             </div>
             <div class="choice-div right-div">
                 <p>Computer: <span id="computer-choice"></span></p>
-                <img id="computer-image" src="/assets/images/rock.jpg" alt="Rock">
+                <img id="computer-image" src="assets/images/rock.jpg" alt="Rock">
             </div>
                 
             <button class="button" id="rock" data-type="rock">Rock <i class="fa-regular fa-hand-back-fist"></i></button>
