--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img id="player-image" src="assets/images/paper.jpg" alt="Paper">
             </div>
             <div class="choice-div right-div">
-                <p>Computer: <span id="computer-choice"></span></p>
+                <p>CPU: <span id="computer-choice"></span></p>
                 <img id="computer-image" src="assets/images/rock.jpg" alt="Rock">
             </div>
                 
